# Abalon-backend

./: .gitignore  METRICS_GUIDE.md  METRICS_README.md  MOVE_LIMIT_FEATURE.md  PARAMS_GUIDE.md  README.md  analyze_metrics.py  example_moves_limit.py  main.py  pyproject.toml  test_train.yaml  train_config.yaml  train_small_config.yaml
metrics/: metrics_2026-04-28_02-08-29.json  metrics_2026-04-28_02-11-23.json
src/: action_space_test.py  test_pytorch_np.py
src/aiBot/: AbalonAiGameState.py  Bot.py  NumpyAbalonAiGame.py  NumpyAbalonAiGameState.py  action_space.py  game_state_utils.py  metrics.py  network_utils.py  neural_net.py  test_pytorch_np.py  train_bot.py
src/aiBot/base_alpha_zero/: Arena.py  Coach.py  Game.py  MCTS.py
src/aiBot/numpy_game_logic/: game_ai_state.py  game_end_logic.py  move_apply.py  numpy_validation_logic.py
src/api/: api.py
src/core/: circle.py  circle_coords.py  circle_team.py  delta_coords.py  game_state.py  moving_directions.py  moving_types.py
src/core/board/: board.py  circle.py  circle_team.py  move_utils.py
src/core/geometry/: circle_coords.py  (+1 more)
src/utils/: GameStateConverter.py
tests/: test_ai_game_state.py  test_ai_game_state_symmetries.py  test_board.py  test_circle.py  test_coords.py  test_game_state.py  test_get_circles_by_ids.py  test_prepare_circles.py
tests/ActionSpace/: test_gen_moves_with_directions.py
tests/Board/: test_board_get_diagonal_limits.py  test_check_for_linear.py  test_check_for_parall.py  test_get_circleLine.py  test_get_move_validation_result.py  test_is_hex_empty.py  test_is_in_board.py  test_move.py
(+2 files in other folders)
