[project]
name = "diplome-code-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coloredlogs>=15.0.1",
    "fastapi[standard]>=0.135.3",
    "numpy>=2.4.4",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "tqdm>=4.67.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
